tests/ui/try_transmute_mut-src-not-intobytes.msrv.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> $DIR/try_transmute_mut-src-not-intobytes.rs:24:40
   |
24 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Src`
   |
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> $DIR/try_transmute_mut-src-not-intobytes.rs:24:40
   |
24 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Dst`
   |
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: IntoBytes` is not satisfied
  --> $DIR/try_transmute_mut-src-not-intobytes.rs:24:40
   |
24 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Dst`
   |
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
